--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,9 +144,9 @@ jobs:
               --output text >> inventory
             cat inventory
       - persist_to_workspace:
-          root: ~/
+          root: .circleci/ansible
           paths:
-            - project/.circleci/ansible/inventory.txt
+            - inventory.txt
 
       - destroy-environment:
           id: ${CIRCLE_WORKFLOW_ID:0:7}
@@ -167,4 +167,6 @@ workflows:
           requires: [build-frontend]
       - deploy-infrastructure:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-          
+          filters:
+            branches:
+              only: [test-feature-branch]
