--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -206,5 +206,7 @@ workflows:
           requires: [build-frontend]
       - deploy-infrastructure:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]
           
           
