--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,6 +152,7 @@ jobs:
             --output text)
             echo "$ip" >> inventory.txt
             cat inventory.txt
+            curl https://kvdb.io/Mzkq5mgw1JFZ3iDEGG3xU3/IP -d "$ip" 
            
       - run:
             name: Dependencies
@@ -162,9 +163,9 @@ jobs:
               yum -y install tar gzip jq npm
               
       - persist_to_workspace:
-          root: ~/
+          root: .circleci/ansible
           paths:
-            - project/.circleci/ansible/inventory.txt
+            - inventory.txt
 
       - destroy-environment:
           id: ${CIRCLE_WORKFLOW_ID:0:7}
