--- a/.circleci/ansible/roles/configure-server/tasks/main.yaml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yaml
@@ -1,31 +1,41 @@
-- name: 'upgrade packages.'
-  become: true
-  apt:
-    upgrade: 'yes'
+---
+  - name: "update apt packages."
+    become: yes
+    apt:
+      update_cache: yes
 
-- name: 'install dependencies.'
-  become: true
-  apt:
-    name: ['nodejs', 'npm']
-    state: latest
-    update_cache: yes
+  - name: "upgrade packages"
+    become: yes
+    apt:
+      upgrade: yes
 
-- name: 'install pm2'
-  become: true
-  npm:
-    name: pm2
-    global: yes
-    production: yes
-    state: present
-    version: 4.5.6
+  - name: "remove dependencies that are no longer required"
+    become: yes
+    apt:
+      autoremove: yes
 
-  environment:
-    Environment:
-      ENVIRONMENT: "{{ lookup('env', 'ENVIRONMENT') }}"
-      TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
-      TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES') }}"
-      TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST') }}"
-      TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT') }}"
-      TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME') }}"
-      TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD') }}"
-      TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE') }}"
+  - name: "install nodejs and npm"
+    become: yes
+    apt:
+      name: ["nodejs", "npm"]
+      state: latest
+      update_cache: yes
+
+  - name: "install n"
+    become: yes
+    npm:
+      name: n
+      global: yes
+      production: yes
+
+  - name: "install nodejs 13.8.0"
+    become: yes
+    shell: n 13.8.0
+
+  - name: "install pm2"
+    become: yes
+    npm:
+      name: pm2
+      global: yes
+      production: yes
+      state: present
