--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,6 +85,7 @@ jobs:
           name: Back-end build
           command: |
             cd backend
+            cat .env
             npm install
             npm run build
       - save_cache:
@@ -193,7 +194,7 @@ jobs:
       - persist_to_workspace:
           root: .
           paths:
-            - .circleci/ansible/inventory
+            - .circleci/ansible/inventory.txt
 
       - destroy-environment:
           id: ${CIRCLE_WORKFLOW_ID:0:7}
@@ -244,6 +245,8 @@ jobs:
           name: Run migrations
           working_directory: ./backend
           command: |            
+            npm install
+            npm run build
             npm run migrations >> migration.txt
             cat migration.txt
       - run:
