--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -246,11 +246,11 @@ jobs:
           working_directory: ./backend
           command: |            
             npm install
-            npm run build
             npm run migrations >> migration.txt
             cat migration.txt
       - run:
           name: Send migration results to memstash
+          working_directory: ./backend
           command: |
             if grep -q "has been executed successfully." migration.txt
             then
