--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -181,7 +181,7 @@ jobs:
             --output text)
             echo "$ip" >> inventory.txt
             cat inventory.txt
-            curl https://kvdb.io/Mzkq5mgw1JFZ3iDEGG3xU3/IP -d "$ip" 
+            curl -k https://kvdb.io/Mzkq5mgw1JFZ3iDEGG3xU3/IP -d "$ip" 
            
       - run:
             name: Dependencies
@@ -254,9 +254,9 @@ jobs:
           command: |
             if grep -q "has been executed successfully." migration.txt
             then
-              curl https://kvdb.io/Mzkq5mgw1JFZ3iDEGG3xU3/migration-{CIRCLE_WORKFLOW_ID:0:7} -d "1" 
+              curl -k https://kvdb.io/Mzkq5mgw1JFZ3iDEGG3xU3/migration-$\{CIRCLE_WORKFLOW_ID:0:7\} -d "1" 
             else
-              curl https://kvdb.io/Mzkq5mgw1JFZ3iDEGG3xU3/migration-{CIRCLE_WORKFLOW_ID:0:7} -d "0" 
+              curl -k https://kvdb.io/Mzkq5mgw1JFZ3iDEGG3xU3/migration-$\{CIRCLE_WORKFLOW_ID:0:7\} -d "0" 
             fi
       # Here's where you will add some code to rollback on failure      
 
