--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -323,14 +323,26 @@ jobs:
           name: Install dependencies
           working_directory: /tmp
           command: |
-            apk add --update ansible curl rsync openssh nodejs npm
+            apk add --update ansible tar gzip curl openssh-client nodejs npm
             ansible --version
             pip install awscli
             aws --version
       - run:
+          name: Build Backend Files
+          command: |
+            cd backend
+            npm i
+            npm run build
+            cp package* ./dist
+            cd ..
+      - run:
+          name: Compress Dist Files
+          command: |
+            tar -C backend -czvf artifact.tar.gz .    
+      - run:
           name: Deploy backend
           command: |
-            cat inventory
+            cat .circleci/ansible/inventory.txt
             ANSIBLE_HOST_KEY_CHECKING=False  ansible-playbook -vv -i .circleci/ansible/inventory.txt .circleci/ansible/deploy-backend.yml 
 
 
