--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -297,7 +297,7 @@ jobs:
             export API_URL="http://${BACKEND_IP}:3030"
             echo API_URL="http://${BACKEND_IP}:3030" >> ".env"
             echo "${API_URL}"
-            npm install webpack-dev-server -g
+            npm install webpack-dev-server
             npm install
             npm run build
       - run:
@@ -369,7 +369,7 @@ jobs:
           name: Frontend smoke test.
           working_directory: ./backend
           command: |
-            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website.eu-central-1.amazonaws.com/index.html"
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-eu-west-1.amazonaws.com/index.html"
             curl -s ${URL} | grep -q "Welcome"
 
   cloudfront-update:
@@ -441,18 +441,18 @@ workflows:
                 - master          
       - configure-infrastructure:
           requires: [deploy-infrastructure]
-      - run-migrations:
-          requires: [configure-infrastructure]
-          filters:
-            branches:
-              only:
-                - master          
-      - deploy-backend:
-          requires:
-            - run-migrations
-      - deploy-frontend:
-          requires:
-            - run-migrations
+      # - run-migrations:
+      #     requires: [configure-infrastructure]
+      #     filters:
+      #       branches:
+      #         only:
+      #           - master          
+      - deploy-backend
+          # requires:
+          #   - run-migrations
+      - deploy-frontend
+          # requires:
+          #   - run-migrations
       - smoke-test:
           requires:
             - deploy-backend
