--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -287,8 +287,10 @@ jobs:
           name: Install AWS CLI dependencies
           working_directory: /tmp
           command: |
-            sudo apt-get -y -qq update
-            sudo apt-get -qq install awscli
+            sudo apt-get update && sudo apt-get install -yy less
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install
       - run:
           name: Rebuild frontend with backend API Url
           working_directory: ./frontend
@@ -304,7 +306,7 @@ jobs:
           name: Deploy frontend objects to S3
           working_directory: ./frontend
           command: |
-            aws s3 cp ./dist "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}" --recursive
+            aws s3 cp ./dist "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}" --recursive --debug
       - persist_to_workspace:
           root: .
           paths:
@@ -441,18 +443,18 @@ workflows:
                 - master          
       - configure-infrastructure:
           requires: [deploy-infrastructure]
-      - run-migrations:
-          requires: [configure-infrastructure]
-          filters:
-            branches:
-              only:
-                - master          
+      # - run-migrations:
+      #     requires: [configure-infrastructure]
+      #     filters:
+      #       branches:
+      #         only:
+      #           - master          
       - deploy-backend:
           requires:
-            - run-migrations
+            - configure-infrastructure #run-migrations
       - deploy-frontend:
           requires:
-            - run-migrations
+            - configure-infrastructure #run-migrations
       - smoke-test:
           requires:
             - deploy-backend
