--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ commands:
           name: Revert migrations
           working_directory: ./backend
           command: |
-            SUCCESS=$(curl --insecure  https://kvdb.io/Mzkq5mgw1JFZ3iDEGG3xU3/migration_<< parameters.id >>)
+            SUCCESS=$(curl --insecure  https://kvdb.io/Mzkq5mgw1JFZ3iDEGG3xU3/migration-<< parameters.id >>)
             echo $SUCCESS
             if [[ "$SUCCESS" == "success" ]]
             then
@@ -412,7 +412,7 @@ jobs:
           command: |
 
             WorkflowID=$(aws cloudformation \
-              list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+              list-exports --query "Exports[?Name=='WorkflowID'].Value" \
               --no-paginate --output text)
             curl -k https://kvdb.io/Mzkq5mgw1JFZ3iDEGG3xU3/WorkflowID -d "${WorkflowID}" 
       - run:
