--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -410,7 +410,6 @@ jobs:
           name: Store old WorkflowID in memstash for cleanup phase
           working_directory: ./.circleci/files
           command: |
-
             WorkflowID=$(aws cloudformation \
               list-exports --query "Exports[?Name=='WorkflowID'].Value" \
               --no-paginate --output text)
@@ -440,13 +439,8 @@ jobs:
             OldWorkflowID=$(curl -k https://kvdb.io/Mzkq5mgw1JFZ3iDEGG3xU3/WorkflowID)
             CurrentWorkflowID=${CIRCLE_WORKFLOW_ID:0:7}
             echo OldWorkflowID: "${OldWorkflowID}"
-            echo CurrentWorkflowID: "${CIRCLE_WORKFLOW_ID}"
-            # Fetch the stack names
-              export STACKS=$(aws cloudformation list-stacks --query "StackSummaries[*].StackName" --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
-              echo Stack names: "${STACKS[@]}"
-              # Remove old stacks and files
-              echo THIS IS THE OldWorkflowID: "${OldWorkflowID}"
-            if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
+            echo CurrentWorkflowID: "${CurrentWorkflowID}"
+            if [[ "$CurrentWorkflowID" != "$OldWorkflowID" ]]
             then
               echo "$OldWorkflowID!=$CurrentWorkflowID => will delete old version"
               aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
