--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -413,6 +413,7 @@ jobs:
             WorkflowID=$(aws cloudformation \
               list-exports --query "Exports[?Name=='WorkflowID'].Value" \
               --no-paginate --output text)
+            echo $WorkflowID  
             curl -k https://kvdb.io/Mzkq5mgw1JFZ3iDEGG3xU3/WorkflowID -d "${WorkflowID}" 
       - run:
           name: Update cloudfront distribution
@@ -440,7 +441,7 @@ jobs:
             CurrentWorkflowID=${CIRCLE_WORKFLOW_ID:0:7}
             echo OldWorkflowID: "${OldWorkflowID}"
             echo CurrentWorkflowID: "${CurrentWorkflowID}"
-            if [[ "$CurrentWorkflowID" != "$OldWorkflowID" ]]
+            if [ ! -z "$OldWorkflowID" -a "$OldWorkflowID!=$CurrentWorkflowID" ]
             then
               echo "$OldWorkflowID!=$CurrentWorkflowID => will delete old version"
               aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
