--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -464,14 +464,14 @@ workflows:
     jobs:
       - build-frontend
       - build-backend
-      # - test-frontend:
-      #     requires: [build-frontend]
-      # - test-backend:
-      #     requires: [build-backend]
-      # - scan-backend:
-      #     requires: [build-backend]
-      # - scan-frontend:
-      #     requires: [build-frontend]
+      - test-frontend:
+          requires: [build-frontend]
+      - test-backend:
+          requires: [build-backend]
+      - scan-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]
       - deploy-infrastructure:
           filters:
             branches:
@@ -479,18 +479,18 @@ workflows:
                 - master          
       - configure-infrastructure:
           requires: [deploy-infrastructure]
-      # - run-migrations:
-      #     requires: [configure-infrastructure]
-      #     filters:
-      #       branches:
-      #         only:
-      #           - master          
+      - run-migrations:
+          requires: [configure-infrastructure]
+          filters:
+            branches:
+              only:
+                - master          
       - deploy-backend:
           requires:
-            - configure-infrastructure #run-migrations
+            - run-migrations
       - deploy-frontend:
           requires:
-            - configure-infrastructure #run-migrations
+            - run-migrations
       - smoke-test:
           requires:
             - deploy-backend
