--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -462,16 +462,16 @@ jobs:
 workflows:
   default:
     jobs:
-      - build-frontend
-      - build-backend
-      - test-frontend:
-          requires: [build-frontend]
-      - test-backend:
-          requires: [build-backend]
-      - scan-backend:
-          requires: [build-backend]
-      - scan-frontend:
-          requires: [build-frontend]
+      # - build-frontend
+      # - build-backend
+      # - test-frontend:
+      #     requires: [build-frontend]
+      # - test-backend:
+      #     requires: [build-backend]
+      # - scan-backend:
+      #     requires: [build-backend]
+      # - scan-frontend:
+      #     requires: [build-frontend]
       - deploy-infrastructure:
           filters:
             branches:
@@ -479,26 +479,26 @@ workflows:
                 - master          
       - configure-infrastructure:
           requires: [deploy-infrastructure]
-      - run-migrations:
-          requires: [configure-infrastructure]
-          filters:
-            branches:
-              only:
-                - master          
-      - deploy-backend:
-          requires:
-            - run-migrations
-      - deploy-frontend:
-          requires:
-            - run-migrations
-      - smoke-test:
-          requires:
-            - deploy-backend
-            - deploy-frontend
-      - cloudfront-update:
-          requires:
-            - smoke-test
-      - cleanup:
-          requires:
-            - cloudfront-update    
+      # - run-migrations:
+      #     requires: [configure-infrastructure]
+      #     filters:
+      #       branches:
+      #         only:
+      #           - master          
+      # - deploy-backend:
+          # requires:
+          #   - run-migrations
+      # - deploy-frontend:
+      #     requires:
+      #       - run-migrations
+      # - smoke-test:
+      #     requires:
+      #       - deploy-backend
+      #       - deploy-frontend
+      # - cloudfront-update:
+      #     requires:
+      #       - smoke-test
+      # - cleanup:
+      #     requires:
+      #       - cloudfront-update    
           
